--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     />
 
-    <title>Suay Resort</title>
+    <title>Comfirt Rooms</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
